--- a/index.html
+++ b/index.html
@@ -181,7 +181,11 @@
                 <p>Let's Connect</p>
             </div>
             <div class="contact">
-                <form name="submitToGoogleSheet">
+    
+
+            <form action="https://api.web3forms.com/submit" method="POST">
+<input type="hidden" name="access_key" value="f1f0a78a-8783-4533-88e9-ba6fdd7710e3">
+
                     <input type="text" name="NAME" placeholder="Name" required>
                     <input type="email" name="EMAIL" placeholder="Email" required>
                     <input type="text" name="SUBJECT" placeholder="Subject">
